# boba-bot

./: README.md  main.py  pyproject.toml
cogs/: Music.py
libs/: ping.py
